# deposition

./: .gitignore  ADC-to-mm.ods  Cargo.toml  README.md  diagram.json  go_to_options.test.yaml  libraries.txt  plot-histogram.py  wokwi.toml
.cargo/: config.toml
cad/: SS_main-housing_test.3mf  control-panel-button.scad  control-panel.scad  display-housing.FCStd  main-housing.scad  minimal-case.FCStd  poti-connector.FCStd
measurements/: 64_samples_median  ADC-to-mm.ods  custom_accept_direction  custom_accept_direction_8  filters.ods  mov_avg_10  mov_avg_3  noise-no-capacitor  noise-with-capacitor
src/: data.rs  gui.rs  history.rs  input.rs  main.rs  menu.rs  millimeters.rs  operation_mode.rs  storage.rs  string_format.rs
src/gui/: calibration.rs  calibration_point.rs  options.rs  start.rs  widgets.rs
src/menu/: start.rs
src/operation_mode/: calibration.rs  options.rs  start.rs
wokwi-tests/: go_to_options.test.yaml
