[package]
name = "deposition"
version = "0.1.0"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[dependencies]
hal = { package = "esp32-hal", version = "0.12.0", features = [
    "embassy-time-timg0",
    "embassy",
] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32"] }
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
embassy-executor = { version = "0.2.0", features = [
    "arch-xtensa",
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
static_cell = "1.0.0"
embassy-sync = { version = "0.2.0", features = ["nightly"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
embassy-futures = "0.1.0"
heapless = "0.7.16"
