[package]
name = "deposition"
version = "1.0.0"
authors = ["ede1998 <online@erik-hennig.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package.esp-storage]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[dependencies]
hal = { package = "esp-hal", version = "0.18.0", features = [
    "esp32",
    "async",
    "embedded-hal-02",
] }
esp-backtrace = { version = "0.12.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = [
    "esp32",
    "uart",
    "log",
    "critical-section",
    # no color feature so wokwi console does not contain color codes
], default-features = false }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
embassy-executor = { version = "0.5.0", features = [
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.1" }
embassy-futures = "0.1.0"
heapless = { version = "0.8.0", features = ["serde"] }
debouncr = "0.2.2"
bitflags = "2.3.2"
log = "0.4.19"
esp-storage = { version = "0.3.0", features = ["esp32"] }
embedded-storage = "0.3.0"
postcard = "1.0.4"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
esp-hal-embassy = { version = "0.1.0", features = [
    "esp32",
    "time-timg0",
    "integrated-timers",
] }
